# prototypeFastAPI

./: .env-example  Makefile  README.md  docker-compose.yaml  docker-compose.yml  prometheus.yml  promtail-config.yml  pyproject.toml
documentation/: mkdocs.yml
master_backend_api/: Dockerfile  Makefile  main.py  pyproject.toml
master_backend_api/app/: .flake8  Makefile  main.py  main_factory.py  settings.py
master_backend_api/app/applications/: base.py  base_crud.py  base_models.py  base_queries.py  base_schemas.py
master_backend_api/app/applications/admin/: admin_auth.py  admin_handler.py  admin_models.py
master_backend_api/app/applications/auth/: auth_handler.py  password_handler.py  router.py  schemas.py
master_backend_api/app/applications/base_model_and_mixins/: base_mixins.py  base_models.py
master_backend_api/app/applications/constants/: messages.py
master_backend_api/app/applications/model_mixins/: base_mixins.py
master_backend_api/app/applications/payment/: constants.py  routers.py  schemas.py
master_backend_api/app/applications/products/: crud.py  models.py  routers.py  schemas.py  shemas.py
master_backend_api/app/applications/security/: oauth2_handler.py
master_backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
master_backend_api/app/constants/: permissions.py
master_backend_api/app/dependencies/: database.py  file_storage.py  order.py  product.py  security.py
master_backend_api/app/features_flags/: feature_flags.py
master_backend_api/app/migrations/: env.py
master_backend_api/app/migrations/versions/: 2025_02_08_1338-8dc3f8c0fe3a_initial.py  2025_02_08_1929-f6d67bcbebcb_initial.py  2025_02_08_1943-dbb0eae5d551_initial.py  2025_02_09_2042-dd246f265ede_add_user_permissions_and_metadata.py  2025_02_15_1510-aa87f5f64a8a_products_and_categories.py  2025_02_15_1541-170b50578cc7_add_created_at_mixin.py  2025_02_15_1553-b4a0176e37fa_restrict_delete_category.py  2025_02_23_0226-3749323487a7_force_logout.py  2025_03_12_2157-3455f9fbc9e4_order.py  2025_03_15_1914-33c7f6a842ce_optimistic_offline_lock.py  2025_03_24_2146-dcfa6ab38c60_product_description.py
master_backend_api/app/services/: redis_service.py  socketio_service.py
master_backend_api/app/services/rabbit/: constants.py  rabbitmq_service.py
master_backend_api/app/sockets/: socket_io.py  socket_routers.py  socket_utils.py
master_backend_api/app/storage/: s3.py  s3_local_minio.py
master_backend_api/app/utils/: camel_case.py  images.py  logs.py
notification_service/: Dockerfile  pyproject.toml
notification_service/app/: connection_config.py  constants.py  consumer.py  handlers.py  main.py  settings.py
notification_service/app/templates/en/: user_recovery_password.html  user_registration.html
notification_service/app/templates/uk/: user_recovery_password.html  user_registration.html
notification_service/app/utils/: email_sender.py
web_jinja/: Dockerfile  pyproject.toml
web_jinja/app/: main.py  settings.py
web_jinja/app/dependencies/: user_dependencies.py
web_jinja/app/roters/main_page/: main_page_routers.py
web_jinja/app/routers/: main_page_routers.py  payment_routers.py
web_jinja/app/services/: README.md  api.py  api_constants.py  security.py
web_jinja/app/templates/: 404.html  cart.html  failed-payment.html  index.html  login.html  product_detail.html  registration.html  socket_messages.html  success-payment.html  user_registered_success.html
(+23 files in other folders)
