[tool.poetry]
name = "prototypefastapi"
version = "0.1.0"
description = ""
authors = ["Vasyl <vasyl@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pyjwt = "^2.10.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.20.0"}
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
