[tool.poetry]
name = "prototypefastapi"
version = "0.1.0"
description = ""
authors = ["Vasyl <vasyl@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pyjwt = "^2.10.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.22.0"}
redis = "^5.2.1"
aio-pika = "^9.5.4"
boto3 = "^1.36.21"
pyhumps = "^3.8.0"
sqladmin = {extras = ["full"], version = "^0.20.1"}
prometheus-fastapi-instrumentator = "^7.0.2"
elasticsearch = {extras = ["async"], version = "^8.17.2"}
stripe = "^11.6.0"
flagsmith = "^3.8.0"
aioboto3 = "^14.1.0"
transliterate = "^1.10.2"
python-socketio = {extras = ["asyncio-client"], version = "^5.12.1"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    migrations
)/
'''
line-length = 120

[tool.isort]
skip = ["migrations"]
