[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Vasyl <vasyl@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
pydantic-settings = "^2.7.1"
jinja2 = "^3.1.5"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
