[tool.poetry]
name = "web-jinja"
version = "0.1.0"
description = ""
authors = ["Vasyl <vasyl@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.11"}
stripe = "^11.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
